oops: Fix Sidebar Title Spacing
This addresses a CSS issue where the sidebar titles have weird
spacing issues. This updates the CSS to remove the custom spacing which
defaults to the correct spacing.

--- a/_static/css/main.css
+++ b/_static/css/main.css
@@ -30,10 +30,6 @@ div.section#osticket>h1 {
     max-width: 100%;
 }
 
-.wy-side-scroll .caption {
-    margin-top: -8px;
-}
-
 .wy-side-scroll .caption-text {
     color: lightgray;
 }
